# jim

./: .gitignore  .pre-commit-config.yaml  GWTC2.py  GaussianExample.py  LICENSE  PowerLawPlusPeak.py  README.md  mkdocs.yml  pyproject.toml  readthedocs.yml  ruff.toml  setup.cfg  test.err
.github/workflows/: CD.yml  CI.yml  container.yml  pre-commit.yml  python-package.yml  python-publish.yml
containers/: Containerfile.cpu  Containerfile.cuda
docs/: examples  gen_ref_pages.py  index.md  quick_start.ipynb  requirements.txt  workflow.md
docs/guides/: anatomy_of_jim.md  api_level.md  gotchas.md
docs/tutorials/: anatomy_of_jim.md  jim_guide.md  prior_system.md  single_event_PE.md
example/: .gitignore  DataProcessing.py  Fetching_data_1.py  Fetching_data_2.py  GW150914.py  GW150914_D.py  GW150914_D_heterodyne.py  GW150914_D_reparam.py  GW150914_IMRPhenomD.py  GW150914_IMRPhenomD_heterodyne.py  GW150914_IMRPhenomPV2.ipynb  GW150914_IMRPhenomPV2.py  GW150914_IMRPhenomPv2.py  GW150914_NRSur7dq4.py  GW150914_PV2.py  GW150914_PV2_newglobal.py  GW150914_Pv2.py  GW150914_Pv2_reparam.py  GW150914_RunAPI.ipynb  GW150914_RunAPI.py  GW150914_TaylorF2.py  GW150914_heterodyne.py  GW150914_like_injection_Pv2.py  GW170817.py  GW170817_IMRPhenomD.py  GW170817_IMRPhenomPV2.py  GW170817_PhenomD_NRTv2.py  GW170817_TaylorF2.py  GW170817_heterodyne.py  GW191216_D_het.py  GW191216_D_het_reparam.py  GW200112_D.py  GW200112_D_reparam.py  H1.txt  InjectionRecovery.py  InjectionRecovery_ref.py  Injection_withParserBNS.py  JaxPjitExperiment.py  Multiple_event_runManager.py  NFRandomWalk.py  (+28 more)
example/ParameterEstimation/: AnalyzeInjection.ipynb  DetectorProjection.py  GPUprofiling.py  GW150914.ipynb  GW150914.py  GW170817.py  GW170817_optimize.py  Injecting_ex.py  Injection_test.py  Injection_withParser.py  Injection_withParserBNS.py  Injection_withParser_debug.py  L1.txt  PE_training.py  ParameterEstimation.md  Scratch.py  gen_injection_config.py  make_ppPlot.py  optimize_param.py
example/ParameterEstimation/configs/: injection_debug.yaml  injection_example.yaml
example/blackjax/: HMC_injection.py  Single_event_derivatives.py
example/configs/: BNS_injection_example.yaml  injection_config_0.yaml  injection_example.yaml
example/configs/zw_test_batch/: injection_config_0.yaml  injection_config_1.yaml  injection_config_10.yaml  injection_config_11.yaml  injection_config_12.yaml  injection_config_13.yaml  injection_config_14.yaml  injection_config_15.yaml  injection_config_16.yaml  injection_config_17.yaml  injection_config_18.yaml  injection_config_19.yaml  injection_config_2.yaml  injection_config_20.yaml  injection_config_21.yaml  injection_config_22.yaml  injection_config_23.yaml  injection_config_24.yaml  injection_config_25.yaml  injection_config_26.yaml  injection_config_27.yaml  injection_config_28.yaml  injection_config_29.yaml  injection_config_3.yaml  injection_config_30.yaml  injection_config_31.yaml  injection_config_32.yaml  injection_config_33.yaml  injection_config_34.yaml  injection_config_35.yaml  injection_config_36.yaml  injection_config_37.yaml  injection_config_38.yaml  injection_config_39.yaml  injection_config_4.yaml  injection_config_40.yaml  injection_config_41.yaml  injection_config_42.yaml  injection_config_43.yaml  injection_config_44.yaml  (+66 more)
example/data/: data.md
example/notebooks/: AnalyzeInjection.ipynb  GW150914.ipynb  GW150914_PV2.ipynb  gw170817.ipynb
example/numpyro/: HMC_injection.py  NeuTra_HMC.py
example/realtimePE/: heterodyneLikelihood.py
example/toy_pop_example/: PowerLawPlusPeak.py
examples/: GW150914_like_injection_Pv2.ipynb  GW170817_IMRPhenomPV2.ipynb
jaxgw/: constants.py  utils.py
jaxgw/PE/: detector_preset.py  detector_projection.py  generate_noise.py  heterodyneLikelihood.py  single_event_likelihood.py
jaxgw/gw/: constants.py
jaxgw/gw/likelihood/: detector_preset.py  detector_projection.py  single_event_likelihood.py  utils.py
jaxgw/gw/waveform/: IMRPhenomB.py  IMRPhenomC.py  TaylorF2.py
jaxgw/likelihood/: .detector_projection.py.swp  detector_preset.py  detector_projection.py  utils.py
jaxgw/sampler/: Gaussian_random_walk.py  NF_proposal.py  NF_prposal.py
jaxgw/waveform/: IMRPhenomC.py  TaylorF2.py
jim_dagster/RealDataCatalog/: assets.py
pipeline/InjectionRecovery/: assets.py
pipeline/RealDataCatalog/: assets.py
pipeline/dagster/RealDataCatalog/: assets.py  definitions.py  minio_resource.py
src/jaxgw/: constants.py  detector.py  heterodyneLikelihood.py  likelihood.py  wave.py
src/jaxgw/PE/: detector_projection.py  heterodyneLikelihood.py  single_event_likelihood.py  time_and_date.py
src/jimgw/: base.py  constants.py  data.py  detector.py  generate_noise.py  generate_noise_mod.py  gps_times.py  heterodyneLikelihood.py  jim.py  likelihood.py  model.py  population_distribution.py  prior.py  test.py  transforms.py  utils.py  wave.py  waveform.py
src/jimgw/PE/: detector_preset.py  detector_projection.py  single_event_likelihood.py  utils.py
src/jimgw/core/: jim.py  prior.py  transforms.py  utils.py
src/jimgw/pipeline/: assets.py  definitions.py
src/jimgw/population/: example_population.py  utils.py  (+5 more)
test/: ProjectionCrossCheck.py  optimize_single_event_likelihood.py  test_IMRPhenomC.py  test_TaylorF2.py  test_integration.py  test_interferometer.py  test_likelihood.py  test_likelihood_bilby.py  test_prior.py  test_transform.py  verify_jit_gmst.py  verify_transform.py  waveform_test.py
test/integration/: .gitignore  single_event_runrun_manager_summary.txt  test_GW150914.py  test_GW150914_D.py  test_GW150914_D_heterodyne.py  test_GW150914_PV2.py  test_GW150914_Pv2.py  test_GW150914_pv2.py  test_extrinsic.py  test_extrinsic_no_distance.py  test_mass_transforms.py  test_periodic_uniform.py  test_run_api.py  test_single_event_run_manager.py
test/likelihood/: test_2steps_optimisation.ipynb
test/toy_example/: Gaussian_kde.py  PowerLawPlusPeak.py
test/unit/: bilby_spin.py  test.ipynb  test_detector.py  test_likelhood.py  test_prior.py  test_run_manager.py  test_sky_position_transform.ipynb  test_transform.py
(+54 files in other folders)
