[project]
name = "jimgw"
version = "0.3.0"
description = "Gravitatioanl wave data analysis tool in Jax"
readme = "README.md"
requires-python = ">=3.11"
authors = [
	{name = "Kaze W. K. Wong", email = "kazewong.physics@gmail.com"},
]
license = {file = "LICENSE"}
dependencies = [
    "astropy>=6.1.4",
    "beartype>=0.19.0",
    "flowmc>=0.4.4",
    "gwpy>=3.0.10",
    "jax>=0.5.0",
    "jaxtyping>=0.2.34",
    "ripplegw>=0.0.9",
    "typed-argument-parser>=1.10.1",
]

[project.optional-dependencies]
docs = [
    "mkdocs-gen-files==0.5.0",
    "mkdocs-jupyter==0.25.1",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-material==9.5.47",
    "mkdocs==1.6.1",
    "mkdocstrings[python]==0.27.0",
    "pymdown-extensions==10.12",
]
pipeline = [
    "dagster>=1.10.11",
    "dagster-webserver>=1.10.11",
    "corner>=2.2.2",
    "matplotlib>=3.10.1",
]


[tool.uv]
dev-dependencies = [
    "jimgw",
    "pre-commit>=4.2.0",
    "coverage>=7.7.0",
    "coveralls>=4.0.1",
    "pytest>=8.3.3",
]

[tool.uv.sources]
jimgw = { workspace = true }

[tool.dg.project.python_environment]
uv_managed = true

[tool.dagster]
module_name = "jimgw.pipeline.definitions"
code_location_name = "jimpipe"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
