[project]
name = "jimgw"
version = "0.3.0"
description = "Gravitatioanl wave data analysis tool in Jax"
readme = "README.md"
requires-python = ">=3.11"
authors = [
	{name = "Kaze W. K. Wong", email = "kazewong.physics@gmail.com"},
]
license = {file = "LICENSE"}
dependencies = [
    "astropy>=6.1.4",
    "beartype>=0.19.0",
    "flowmc>=0.4.4",
    "gwpy>=3.0.10",
    "jax>=0.5.0",
    "jaxtyping>=0.2.34",
    "ripplegw>=0.0.9",
]

[project.optional-dependencies]
docs = [
    "mkdocs-gen-files==0.5.0",
    "mkdocs-jupyter==0.25.1",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-material==9.5.47",
    "mkdocs==1.6.1",
    "mkdocstrings[python]==0.27.0",
    "pymdown-extensions==10.12",
]
pipeline = [
    "dagster>=1.10.11",
    "dagster-webserver>=1.10.11",
    "corner>=2.2.2",
    "matplotlib>=3.10.1",
]
cuda = [
    "jax[cuda]>=0.5.0",
]

[tool.uv]
dev-dependencies = [
    "jimgw",
    "pre-commit>=4.2.0",
    "coverage>=7.7.0",
    "coveralls>=4.0.1",
    "pytest>=8.3.3",
]

[tool.uv.sources]
jimgw = { workspace = true }

[tool.dg.project.python_environment]
uv_managed = true

[tool.dagster]
modules = [
{ type="module", name="jimgw.pipeline.InjectionRecovery.definitions" },
{ type="module", name="jimgw.pipeline.RealDataCatalog.definitions" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pyright]
include = ["src","tests",]
exclude = ["docs"]

[tool.ruff]
include = ["src"]
exclude = ["test", "docs"]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\. )?abstractmethod",
    "def tree_flatten",
    "def tree_unflatten",
]