[metadata]
name = jimGW
version = 0.0.4.5
author = Kaze Wong
author_email = kazewong.physics@gmail.com
url = https://github.com/kazewong/jim
description = Gravitatioanl wave data analysis tool in Jax
keywords = sampling, inference, machine learning, normalizing, autodiff, jax
license = MIT

[options]
packages_dir=
    =src
packages = find:
install_requires =
    jax>=0.4.12
    jaxlib>=0.4.12
    flowMC>=0.2.1
    ripplegw
    gwpy
    corner
python_requires =  >=3.9,<3.11

[options.packages.find]
where=src
