[metadata]
name = jimGW
version = 0.1.1
author = Kaze Wong
author_email = kazewong.physics@gmail.com
url = https://github.com/kazewong/jim
description = Gravitatioanl wave data analysis tool in Jax
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sampling, inference, machine learning, normalizing, autodiff, jax
license = MIT

[options]
packages_dir=
    =src
packages = find:
install_requires =
    jax>=0.4.12
    jaxlib>=0.4.12
    flowMC>=0.3.4
    ripplegw
    gwpy
    corner
    astropy
    typed-argument-parser
    jaxtyping>=0.2.31
    beartype
    flax>=0.8.5
python_requires =  >=3.9

[options.packages.find]
where=src
